<resources>
    <string name="app_name">NoteBook App</string>
    <string name="login_with_google">Login with Google</string>
    <string name="tvLogin">Let\'s Login</string>
    <string name="login_sub_heading">and note your idea</string>
    <string name="logout">Logout</string>
    <string name="create_screen_header">What do you want to \nNote?</string>
    <string name="back">Back</string>
    <string name="new_notes_toolbar_title">New Notes</string>
    <string name="search_placeholder_text">Your Search Goes Here!</string>
    <string name="home">Home</string>
    <string name="finished">Finished</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="finished_fragment">Finished Fragment</string>
    <string name="home_placeholder_title">Start your Journey</string>
    <string name="home_placeholder_subtext">Note your first idea and start your journey</string>
    <string name="enter_title">Enter Title</string>
    <string name="create_notes_sub_text">Your Ideas goes here!!</string>
    <string name="add_tags">Add Tags</string>
</resources>